[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "pyitm"
author = "Patrick Welzel"
author-email = "git@kcirtap.de"
classifiers = [ "License :: OSI Approved :: MIT License",]
description-file = "README.md"
requires-python = ">=3.6"
dist-name = "pythonitm"
